2008-02-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_trough), (clearlooks_draw_menu_frame):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_stepper):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Fixed problems with big radius, fixes #395013
	(I mean fixes everything that can be fixed with Gtk 2.x)

2008-02-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Fixed broken algorithm for the contrast option

2008-02-26  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for the 2.13.6 release.

2008-02-20  Thomas Wood  <thos@gnome.org>

	* themes/Crux/gtk-2.0/gtkrc: Lighten the bg colour a little

2008-02-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	In medio stat virtus

2008-02-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Less transparency on button focus fill

2008-02-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_tab):
	A little bit more contrast on tab focus (+8%)
	Indents

2008-02-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/clearlooks.xml.in.in:
	CLASSIC is the default Clearlooks style

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	... forgot to assign the CLAMP to the radius :)

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Reverted some code, that was not useless :P

2008-02-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS: