@@ -1,3 +1,7 @@
+2008-02-28  Thomas Wood  <thos@gnome.org>
+
+	* engines/crux/src/crux-draw.c: Improve button border contrast
+
 2008-02-26  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
